jobs_nogpu/S12.10.test5_parse_2019-11-17_20-08-54
[33mWARNING:[0m seccomp requested but not enabled, seccomp library is missing or too old
  File "analysis/parse.py", line 142
    pickle.dump([flatparses, f, pickle.HIGHEST_PROTOCOL)
                                                       ^
SyntaxError: invalid syntax
